fix(PDS-9): remove vertical scroll on small screens for page services

--- a/packages/page-layout/stories/styles.module.scss
+++ b/packages/page-layout/stories/styles.module.scss
@@ -16,4 +16,5 @@
 .fullPageHeight {
   position: relative;
   height: 100vh;
+  overflow: auto;
 }
